--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
             width: 120px; height: 120px; border-radius: 50%; background-size: cover;
             margin: 0 auto 12px; border: 3px solid #667eea;
         }
-        .photo-upload { font-size: 14px; color: #666; text-align: center; }
 
         .section-title { font-size: 18px; font-weight: 700; margin-bottom: 16px; color: #333; }
         .btn-primary {
@@ -138,6 +137,7 @@
         }
         .ai-response {
             background: #e8f5e9; padding: 16px; border-radius: 12px; margin-top: 16px; white-space: pre-line;
+            line-height: 1.5;
         }
     </style>
 </head>
@@ -426,7 +426,7 @@
 
                     {savedNeeds.length > 0 ? (
                         <div>
-                            <div className="section-title">Αποθηκευμένες ανάγκες (θα λαμβάνεις ειδοποιήσεις)</div>
+                            <div className="section-title">Αποθηκευμένες ανάγκες</div>
                             {savedNeeds.map((need, i) => (
                                 <div key={i} className="need-item">
                                     {need}
@@ -434,10 +434,10 @@
                             ))}
                         </div>
                     ) : (
-                        <p style={{color: '#666'}}>Πρόσθεσε την πρώτη ανάγκη παραπάνω</p>
+                        <p style={{color: '#666'}}>Πρόσθεσε την πρώτη σου ανάγκη παραπάνω</p>
                     )}
 
-                    <div className="section-title" style={{marginTop: '24px'}}>Γρήγορα links για αναζήτηση</div>
+                    <div className="section-title" style={{marginTop: '24px'}}>Γρήγορα links αναζήτησης</div>
                     <div className="shop-card">
                         <h3>Shein Παιδικά</h3>
                         <a href="https://eur.shein.com/Kids-c-2031.html" target="_blank">Ψάξε στο Shein</a>
@@ -457,19 +457,48 @@
             const askAI = () => {
                 if (!question.trim()) return;
 
-                let mockAnswer = `Γεια! Βλέπω ότι έχεις ${selectedChild?.name || 'ένα παιδί'} ${selectedChild?.age || '?'} ετών, ${selectedChild?.gender || ''}.`;
+                const q = question.toLowerCase();
+                const name = selectedChild?.name || 'το παιδί';
+                const age = selectedChild?.age || 'μικρό παιδί';
+                const gender = selectedChild?.gender || '';
+                const colors = selectedChild?.favoriteColors?.join(', ') || 'χρώματα που του αρέσουν';
+                const size = selectedChild?.clothingSize || 'κατάλληλο μέγεθος';
 
-                if (question.toLowerCase().includes('μπουφάν') || question.toLowerCase().includes('πανωφόρι')) {
-                    mockAnswer += `\n\nΠροτείνω χειμερινό μπουφάν μέγεθος 116-122cm (θα κάνει και του χρόνου).`;
-                    mockAnswer += `\nΚοίταξε στο Shein ή Skroutz, τώρα είναι εκπτώσεις χειμώνα. Budget 25-45€.`;
-                } else if (question.toLowerCase().includes('δώρο') || question.toLowerCase().includes('γενέθλια')) {
-                    mockAnswer += `\n\nΓια ${selectedChild?.age || '?'} ετών κορίτσι που της αρέσουν ${selectedChild?.favoriteColors?.join(', ') || 'χρώματα'}, προτείνω κούκλες, σετ δημιουργίας ή ρούχα πριγκίπισσας.`;
-                    mockAnswer += `\nΚοίταξε Public ή Jumbo για προσφορές.`;
-                } else {
-                    mockAnswer += `\n\nΠες μου πιο συγκεκριμένα τι ψάχνεις (π.χ. "ρούχα χειμώνα", "δώρα", "παπούτσια") και θα σου πω καλύτερα!`;
+                let response = `Γεια! Βλέπω ότι μιλάμε για ${name}, ${age} ετών ${gender}.`;
+
+                if (q.includes('μπουφάν') || q.includes('πανωφόρι') || q.includes('χειμώνα') || q.includes('ζεστό')) {
+                    response += `\n\nΓια χειμώνα προτείνω αντιανεμικό/αδιάβροχο μπουφάν με γούνα ή fleece εσωτερικά.`;
+                    response += `\nΜέγεθος: ${size} ή 1-2 νούμερα μεγαλύτερο για να κάνει και του χρόνου.`;
+                    response += `\nΠολύ καλές τιμές τώρα στο Shein ή Skroutz (20-45€).`;
+                    response += `\n\nΠροτίμησε ${colors} για να του αρέσει!`;
+                } 
+                else if (q.includes('παπούτσι') || q.includes('παπούτσια') || q.includes('μπότες')) {
+                    response += `\n\nΓια ${age} ετών προτείνω χειμερινές μπότες ή αθλητικά με καλή σόλα.`;
+                    response += `\nΜέγεθος: ${selectedChild?.shoeSize || '28-30'} ή +1 για χοντρές κάλτσες.`;
+                    response += `\nΚοίταξε Jumbo ή Public, έχουν πολλές επιλογές κάτω από 30€.`;
+                } 
+                else if (q.includes('δώρο') || q.includes('γενέθλια') || q.includes('δώρο')) {
+                    response += `\n\nΙδανικά δώρα για ${age} ετών ${gender}:`;
+                    response += `\n- Κούκλες ή σετ δημιουργίας (αν είναι κορίτσι)`;
+                    response += `\n- Lego ή παιχνίδια δράσης (αν είναι αγόρι)`;
+                    response += `\n- Ρούχα/αξεσουάρ σε ${colors}`;
+                    response += `\nΚοίταξε Public ή Skroutz για προσφορές 15-50€.`;
+                } 
+                else if (q.includes('απόκρι') || q.includes('στολή') || q.includes('καρναβάλι')) {
+                    response += `\n\nΕπειδή είναι κοντά Απόκριες, προτείνω στολές πριγκίπισσας, πειρατή ή ζώου.`;
+                    response += `\nShein έχει φθηνές και όμορφες (10-25€).`;
+                    response += `\nΠάρε μέγεθος ${size} ή λίγο μεγαλύτερο.`;
+                } 
+                else {
+                    response += `\n\nΜπορώ να σε βοηθήσω πολύ καλύτερα αν μου πεις συγκεκριμένα, π.χ.:`;
+                    response += `\n- "χειμερινό μπουφάν για κορίτσι"`;
+                    response += `\n- "δώρα γενεθλίων 5 ετών"`;
+                    response += `\n- "παπούτσια μέγεθος 29"`;
+                    response += `\n- "στολή απόκριες budget 20€"`;
+                    response += `\n\nΠες μου τι ψάχνεις ακριβώς! 😊`;
                 }
 
-                setAnswer(mockAnswer);
+                setAnswer(response);
                 setQuestion('');
             };
 
@@ -477,25 +506,74 @@
                 <div>
                     <div className="section-title">AI Σύμβουλος Αγορών</div>
                     <p style={{color: '#666', marginBottom: '16px'}}>
-                        Ρώτα για προτάσεις ρούχων, δώρων, μεγέθη κλπ για {selectedChild?.name || 'το παιδί σου'}
+                        Ρώτα για ρούχα, δώρα, μεγέθη, προτάσεις για {selectedChild?.name || 'το παιδί σου'}
                     </p>
 
                     <textarea 
                         className="edit-input" 
-                        placeholder="π.χ. Τι να πάρω για Απόκριες; Χρειάζομαι μπουφάν budget 30€" 
+                        placeholder="π.χ. χειμερινό μπουφάν, δώρο γενεθλίων, στολή απόκριες budget 20€" 
                         value={question} 
                         onChange={e => setQuestion(e.target.value)}
                         style={{width: '100%', height: '100px', resize: 'none', marginBottom: '12px'}}
                     />
 
-                    <button className="btn-primary" onClick={askAI}>Ρώτα τον AI</button>
+                    <button className="btn-primary" onClick={askAI}>Ρώτα τον Σύμβουλο</button>
 
                     {answer && (
                         <div className="ai-response">
-                            <strong>Απάντηση AI:</strong><br />
                             {answer}
                         </div>
                     )}
+                </div>
+            );
+        }
+
+        function NeedsTab({ selectedChild, savedNeeds, setSavedNeeds }) {
+            const [search, setSearch] = useState('');
+
+            const addNeed = () => {
+                if (search.trim()) {
+                    setSavedNeeds(prev => [...prev, search.trim()]);
+                    setSearch('');
+                }
+            };
+
+            return (
+                <div>
+                    <div className="section-title">Τι χρειάζεται {selectedChild?.name || 'το παιδί'};</div>
+                    <div style={{display: 'flex', gap: '8px', marginBottom: '20px'}}>
+                        <input 
+                            className="edit-input" 
+                            placeholder="π.χ. χειμερινό μπουφάν, παπούτσια 29, στολή απόκριες" 
+                            value={search} 
+                            onChange={e => setSearch(e.target.value)} 
+                            style={{flex: 1}}
+                        />
+                        <button className="btn-primary" onClick={addNeed} style={{width: 'auto', padding: '0 20px'}}>Προσθήκη</button>
+                    </div>
+
+                    {savedNeeds.length > 0 ? (
+                        <div>
+                            <div className="section-title">Αποθηκευμένες ανάγκες</div>
+                            {savedNeeds.map((need, i) => (
+                                <div key={i} className="need-item">
+                                    {need}
+                                </div>
+                            ))}
+                        </div>
+                    ) : (
+                        <p style={{color: '#666'}}>Πρόσθεσε την πρώτη σου ανάγκη παραπάνω</p>
+                    )}
+
+                    <div className="section-title" style={{marginTop: '24px'}}>Γρήγορα links αναζήτησης</div>
+                    <div className="shop-card">
+                        <h3>Shein Παιδικά</h3>
+                        <a href="https://eur.shein.com/Kids-c-2031.html" target="_blank">Ψάξε στο Shein</a>
+                    </div>
+                    <div className="shop-card">
+                        <h3>Skroutz</h3>
+                        <a href="https://www.skroutz.gr/" target="_blank">Ψάξε στο Skroutz</a>
+                    </div>
                 </div>
             );
         }
