--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
             width: 120px; height: 120px; border-radius: 50%; background-size: cover;
             margin: 0 auto 12px; border: 3px solid #667eea;
         }
-        .photo-upload { font-size: 14px; color: #666; text-align: center; }
 
         .section-title { font-size: 18px; font-weight: 700; margin-bottom: 16px; color: #333; }
         .btn-primary {
@@ -474,14 +473,14 @@
                 let response = `Γεια σου! Βλέπω ότι μιλάμε για ${name}, ${age} ετών ${gender}.`;
 
                 if (q.includes('μπουφάν') || q.includes('πανωφόρι') || q.includes('ζεστό') || q.includes('χειμώνα') || q.includes('jacket')) {
-                    response += `\n\nΠροτείνω **αντιανεμικό/αδιάβροχο μπουφάν** με fleece ή γούνα εσωτερικά.`;
+                    response += `\n\nΠροτείνω αντιανεμικό/αδιάβροχο μπουφάν με fleece ή γούνα εσωτερικά.`;
                     response += `\nΜέγεθος: ${size} ή 1-2 νούμερα μεγαλύτερο για να κρατήσει και του χρόνου.`;
                     response += `\nΤιμές τώρα: 20-45€ στο Shein ή Skroutz (πολλές εκπτώσεις χειμώνα).`;
                     response += `\nΙδανικά σε ${colors} για να του/της αρέσει!`;
                     response += `\n\nLink: https://www.skroutz.gr/c/380/paidika-rouxa.html?keyphrase=μπουφάν+παιδικό`;
                 } 
                 else if (q.includes('παπούτσια') || q.includes('μπότες') || q.includes('παπουτσ') || q.includes('sneakers') || q.includes('boots')) {
-                    response += `\n\nΓια ${age} ετών προτείνω **χειμερινές μπότες** ή αθλητικά με καλή σόλα και ζεστή φόδρα.`;
+                    response += `\n\nΓια ${age} ετών προτείνω χειμερινές μπότες ή αθλητικά με καλή σόλα και ζεστή φόδρα.`;
                     response += `\nΝούμερο: ${shoe} ή +1 για χοντρές κάλτσες.`;
                     response += `\nΚοίταξε στο Jumbo ή Public, έχουν πολλές επιλογές κάτω από 30-40€.`;
                     response += `\n\nLink: https://www.e-jumbo.gr/paichnidia/paidika-rouxa?query=μπότες`;
@@ -495,10 +494,10 @@
                     response += `\n\nLink: https://www.public.gr/cat/paidika-paixnidia/paixnidia`;
                 } 
                 else if (q.includes('απόκρι') || q.includes('στολή') || q.includes('καρναβάλι') || q.includes('αποκριες') || q.includes('costume')) {
-                    response += `\n\nΕπειδή είναι κοντά Απόκριες, προτείνω **στολές** πριγκίπισσας, πειρατή, ζώου ή superhero.`;
+                    response += `\n\nΕπειδή είναι κοντά Απόκριες, προτείνω στολές πριγκίπισσας, πειρατή, ζώου ή superhero.`;
                     response += `\nShein έχει πάρα πολύ φθηνές και όμορφες (10-25€).`;
                     response += `\nΠάρε μέγεθος ${size} ή λίγο μεγαλύτερο για άνεση.`;
-                    response += `\n\nLink: https://eur.shein.com/Kids-c-2031.html?ici=s1`EditArea`Kids`1~~`;
+                    response += `\n\nLink: https://eur.shein.com/Kids-c-2031.html`;
                 } 
                 else if (q.includes('ρούχα') || q.includes('παντελόνι') || q.includes('φορεμα') || q.includes('φούστα') || q.includes('ρούχο')) {
                     response += `\n\nΓια ${age} ετών ${gender} προτείνω άνετα και ζεστά ρούχα χειμώνα.`;
