--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             const [activeTab, setActiveTab] = useState('home');
             const [children, setChildren] = useState([]);
             const [selectedChildId, setSelectedChildId] = useState(null);
-            const [savedNeeds, setSavedNeeds] = useState({}); // τώρα είναι object { childId: ["ανάγκη1", "ανάγκη2"] }
+            const [savedNeeds, setSavedNeeds] = useState({}); // { childId: ["ανάγκη1", "ανάγκη2"] }
 
             useEffect(() => {
                 const saved = localStorage.getItem('kidsShoppingChildren');
@@ -405,7 +405,6 @@
         function NeedsTab({ selectedChild, savedNeeds, setSavedNeeds }) {
             const [search, setSearch] = useState('');
 
-            // Αν δεν υπάρχει παιδί, μην προσπαθείς να αποθηκεύσεις
             if (!selectedChild) {
                 return (
                     <div className="empty-state">
@@ -415,13 +414,16 @@
                 );
             }
 
-            const childNeeds = savedNeeds[selectedChild.id] || [];
+            // Πάντα array - ακόμα και άδειο
+            const childNeeds = Array.isArray(savedNeeds[selectedChild.id]) ? savedNeeds[selectedChild.id] : [];
 
             const addNeed = () => {
                 if (search.trim()) {
                     setSavedNeeds(prev => {
                         const newNeeds = { ...prev };
-                        if (!newNeeds[selectedChild.id]) newNeeds[selectedChild.id] = [];
+                        if (!Array.isArray(newNeeds[selectedChild.id])) {
+                            newNeeds[selectedChild.id] = [];
+                        }
                         newNeeds[selectedChild.id] = [...newNeeds[selectedChild.id], search.trim()];
                         return newNeeds;
                     });
@@ -453,7 +455,7 @@
                             ))}
                         </div>
                     ) : (
-                        <p style={{color: '#666'}}>Πρόσθεσε την πρώτη ανάγκη για αυτό το παιδί παραπάνω</p>
+                        <p style={{color: '#666'}}>Δεν έχεις προσθέσει ακόμα ανάγκες για αυτό το παιδί</p>
                     )}
 
                     <div className="section-title" style={{marginTop: '24px'}}>Γρήγορα links για αναζήτηση</div>
@@ -494,13 +496,11 @@
                     response += `\nΜέγεθος: ${size} ή 1-2 νούμερα μεγαλύτερο για να κρατήσει και του χρόνου.`;
                     response += `\nΤιμές τώρα: 20-45€ στο Shein ή Skroutz (πολλές εκπτώσεις χειμώνα).`;
                     response += `\nΙδανικά σε ${colors} για να του/της αρέσει!`;
-                    response += `\n\nLink: https://www.skroutz.gr/c/380/paidika-rouxa.html?keyphrase=μπουφάν+παιδικό`;
                 } 
                 else if (q.includes('παπούτσια') || q.includes('μπότες') || q.includes('παπουτσ') || q.includes('sneakers') || q.includes('boots')) {
                     response += `\n\nΓια ${age} ετών προτείνω χειμερινές μπότες ή αθλητικά με καλή σόλα και ζεστή φόδρα.`;
                     response += `\nΝούμερο: ${shoe} ή +1 για χοντρές κάλτσες.`;
                     response += `\nΚοίταξε στο Jumbo ή Public, έχουν πολλές επιλογές κάτω από 30-40€.`;
-                    response += `\n\nLink: https://www.e-jumbo.gr/paichnidia/paidika-rouxa?query=μπότες`;
                 } 
                 else if (q.includes('δώρο') || q.includes('γενέθλια') || q.includes('christmas') || q.includes('δωρο') || q.includes('gift')) {
                     response += `\n\nΚαλές ιδέες δώρων για ${age} ετών ${gender}:`;
@@ -508,19 +508,16 @@
                     response += `\n- Lego, αυτοκινητάκια ή παιχνίδια δράσης (αγόρι)`;
                     response += `\n- Ρούχα ή αξεσουάρ σε ${colors}`;
                     response += `\nΨάξε Public, Jumbo ή Skroutz για προσφορές 15-60€.`;
-                    response += `\n\nLink: https://www.public.gr/cat/paidika-paixnidia/paixnidia`;
                 } 
                 else if (q.includes('απόκρι') || q.includes('στολή') || q.includes('καρναβάλι') || q.includes('αποκριες') || q.includes('costume')) {
                     response += `\n\nΕπειδή είναι κοντά Απόκριες, προτείνω στολές πριγκίπισσας, πειρατή, ζώου ή superhero.`;
                     response += `\nShein έχει πάρα πολύ φθηνές και όμορφες (10-25€).`;
                     response += `\nΠάρε μέγεθος ${size} ή λίγο μεγαλύτερο για άνεση.`;
-                    response += `\n\nLink: https://eur.shein.com/Kids-c-2031.html`;
                 } 
                 else if (q.includes('ρούχα') || q.includes('παντελόνι') || q.includes('φορεμα') || q.includes('φούστα') || q.includes('ρούχο')) {
                     response += `\n\nΓια ${age} ετών ${gender} προτείνω άνετα και ζεστά ρούχα χειμώνα.`;
                     response += `\nΠροτίμησε σετ φούτερ + παντελόνι ή φόρμες σε ${colors}.`;
                     response += `\nShein και H&M έχουν πολλές επιλογές κάτω από 20-30€.`;
-                    response += `\n\nLink: https://eur.shein.com/girls-clothing-c-1991.html`;
                 } 
                 else {
                     response += `\n\nΔεν κατάλαβα ακριβώς τι ψάχνεις, αλλά μπορώ να σε βοηθήσω καλύτερα αν μου πεις πιο συγκεκριμένα!`;
